# Animation

./: CMakeLists.txt
data/shaders/: mesh.glsl
data/vache/: masses.eti
exec/: Fichier_Param.objet1  Fichier_Param.simu
include/: Matrix.h  ObjetSimuleRigidBody.h
src/: CalculsMSS.cpp  CalculsRigidBody.cpp  Matrix.cpp  ObjetSimule.cpp  ObjetSimuleMSS.cpp  ObjetSimuleRigidBody.cpp  SolveurExpl.cpp  Viewer-init.cpp  Viewer.cpp
